Fixing columns misalignment in CC fields

--- a/app/javascript/src/PaymentGateways/braintree/BraintreeCustomerForm.scss
+++ b/app/javascript/src/PaymentGateways/braintree/BraintreeCustomerForm.scss
@@ -16,3 +16,11 @@
   font-style: italic;
   margin-bottom: 2rem;
 }
+
+.list-unstyled {
+  .form-control.col-md-6 {
+    // Hack: needed because Braintree styles are colliding with ours
+    // scss-lint:disable ImportantRule
+    width: 50% !important;
+  }
+}
